--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -76,6 +76,7 @@ a:hover {text-decoration:underline;}
 
 .center{
   margin: 0 auto;
+  
 }
 
 .tc{
@@ -87,10 +88,15 @@ a:hover {text-decoration:underline;}
 a.new_button {
   color: white;
   background-color: #8B0000;
-  text-decoration:none;
-  padding: 7px 15px;
-  margin: -6px 4px;
+  text-decoration: none;
+  padding: 10px 0px;
   border-radius: 5px;
+  text-align: center;
+  position: relative;
+  margin: 0 auto;
+  display: block;
+  width: 500px;
+  font-size: 28px;
 }
 
 a.submit {
