--- a/app/assets/stylesheets/checkins.css.scss
+++ b/app/assets/stylesheets/checkins.css.scss
@@ -2,91 +2,77 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-ul#logos li {
-  height: 0;
+h3.error {
+  text-align: center;
+  color: white;
+  background-color: red;
+  display: none;
 }
 
-li a.logo {
-  background-image: url('/assets/jobfair.jpg');
-  overflow: hidden;
-  color: transparent;
-  position: relative;
-  float: left;
+h3.success {
+  text-align: center;
+  color: white;
+  background-color: #0078AE;
+  display: none;
+}
+
+input[type=text]
+{
+    font-size: 36px;
+    padding-left: 10px;
+    border-radius: 5px;
+    width: 485px;
+    background-color: #EEE;
+}
+
+form {
+  margin-top: 70px;
+}
+
+.field {
+  display: block;
+  margin: 10px auto;
+  width: 500px;
+}
+
+.selected {
+  border: 4px solid #0078AE;
 }
   
-#ocs {
-  background-position: -38px -30px;
-  height: 0;
-  padding-bottom: 195px;
-  width: 132px;
+a.logo {
+  display: block;
+  background-size: contain;
+  background-repeat:no-repeat;
+  color: transparent;
+  margin: 0 auto;
+  background-position: center center;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box; /* Firefox */
 }
 
-#huddle {
-  background-position: -595px -361px;
-  height: 0;
-  padding-bottom: 51px;
-  width: 174px;
+a.logo.col {
+  margin: 0 1%;
+  width: 23%;
+  height: 100px;
+  float: left;
 }
 
-#agape {
-  background-position: -442px -835px;
-  height: 0;
-  padding-bottom: 47px;
-  width: 55px;
+a.logo.col2 {
+  margin: 0 1%;
+  width: 48%;
+  height: 158px;
+  float: left;
+  margin-top: -63px;
 }
 
-#swanrus {
-  background-position: -489px -796px;
-  height: 0;
-  padding-bottom: 25px;
-  width: 168px;
-}
-
-#flywheel {
-  background-position: -476px -736px;
-  height: 0;
-  padding-bottom: 37px;
-  width: 128px;
-}
-
-#lemon {
-  background-position: -671px -796px;
-  height: 0;
-  padding-bottom: 29px;
-  width: 99px;
-}
-
-#west {
-  background-position: -617px -733px;
-  height: 0;
-  padding-bottom: 39px;
-  width: 49px;
-}
-
-#lyconic {
-  background-position: -673px -738px;
-  height: 0;
-  padding-bottom: 29px;
-  width: 99px;
-}
-
-#ervinsmith {
-  background-position: -500px -847px;
-  height: 0;
-  padding-bottom: 29px;
-  width: 112px;
-}
-
-#mtrl {
-  background-position: -623px -834px;
-  height: 0;
-  padding-bottom: 49px;
-  width: 59px;
-}
-
-#bwb {
-  background-position: -697px -834px;
-  height: 0;
-  padding-bottom: 49px;
-  width: 68px;
-}
+#ocs {    background-image: url('/assets/OCS.png');}
+#hudl {   background-image: url('/assets/hudl.png');}
+#agape {  background-image: url('/assets/agape_long.png');}
+#swanrus {background-image: url('/assets/swanson_russell.png');}
+#flywheel {background-image: url('/assets/flywheel_color.png');}
+#lemonly {background-image: url('/assets/lemonly.png');}
+#west {   background-image: url('/assets/west.png');}
+#lyconic {background-image: url('/assets/lyconic.png');}
+#es {     background-image: url('/assets/ervin_and_smith.png');}
+#mtrl {   background-image: url('/assets/MRTL.jpg');}
+#bwb {    background-image: url('/assets/big_wheel_brigade.png');}
