--- a/app/views/checkins/_form.html.erb
+++ b/app/views/checkins/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@checkin) do |f| %>
+<%= form_for(@checkin, remote: true) do |f| %>
   <% if @checkin.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@checkin.errors.count, "error") %> prohibited this checkin from being saved:</h2>
@@ -12,18 +12,13 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :name, :placeholder => "Name", :title => "Name" %>
   </div>
   <div class="field">
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
+    <%= f.text_field :title, :placeholder => "Title", :title => "Title" %>
   </div>
-  <div class="field">
-    <%= f.label :company %><br />
-    <%= f.text_field :company %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+  
+  <%= f.hidden_field :company %>
+  
+  <%= link_to('Print Name Tag ', '#', :class => 'new_button submit print', :id => 'submit') %>
 <% end %>
