fixed mtrl label

--- a/app/views/checkins/_form.html.erb
+++ b/app/views/checkins/_form.html.erb
@@ -12,10 +12,10 @@
   <% end %>
 
   <div class="field">
-    <%= f.text_field :name, :placeholder => "Name", :title => "Name" %>
+    <%= f.text_field :name, :placeholder => "Name", :title => "Name", :autocomplete => :off %>
   </div>
   <div class="field">
-    <%= f.text_field :title, :placeholder => "Title", :title => "Title" %>
+    <%= f.text_field :title, :placeholder => "Title", :title => "Title", :autocomplete => :off %>
   </div>
   
   <%= f.hidden_field :company %>
