--- a/app/views/checkins/new.html.erb
+++ b/app/views/checkins/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Welcome! Please Check-In</h1>
-<h3>Select Your Organization:</h3>
+<h1>Welcome! Please Select Your Organization</h1>
+<h3 class="transparent">Organizations</h3>
 
 <div id="sponsors" class="clear">
   <!-- Supporting Sponsor Logos -->
