--- a/app/assets/stylesheets/checkins.css.scss
+++ b/app/assets/stylesheets/checkins.css.scss
@@ -65,6 +65,10 @@ a.logo.col2 {
   margin-top: -63px;
 }
 
+.marquee {
+  overflow: hidden;
+}
+
 #ocs {    background-image: url('/assets/OCS.png');}
 #hudl {   background-image: url('/assets/hudl.png');}
 #agape {  background-image: url('/assets/agape_long.png');}
