--- a/app/views/checkins/new.html.erb
+++ b/app/views/checkins/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome! Please Select Your Organization</h1>
+<h1><marquee>Please Select Your Organization</marquee></h1>
 <h3 class="transparent">Organizations</h3>
 
 <div id="sponsors" class="clear">
